--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -13,6 +13,11 @@ jobs:
   
   # Runs the Maven test phase on the project
   maven_test:
+    - name: Cache build
+    uses: actions/cache@v3
+    with:
+      key: cached-build-${{github.sha}}
+      path: .
 
     runs-on: ubuntu-latest
 
@@ -47,7 +52,12 @@ jobs:
 
   # Uploads dependency graph to GitHub to receive Dependabot alerts 
   update_dependence_graph:
-
+      - name: Restore cached build
+      uses: actions/cache@v3
+      with:
+        key: cached-build-${{github.sha}}
+        path: .
+        
     runs-on: ubuntu-latest
 
     permissions:
