--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -50,10 +50,12 @@ jobs:
       with:
         key: cached-build-${{github.sha}}
         path: .
-    
+  
   # Uploads dependency graph to GitHub to receive Dependabot alerts 
   update_dependence_graph:
 
+    needs: [maven_test]  # Enforces that maven_test runs first
+    
     runs-on: ubuntu-latest
 
     permissions:
